--- a/index.html
+++ b/index.html
@@ -6,3 +6,5 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 </html>
+
+<body style="margin: 0; padding: 0;">
