--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 </html>
 
 <body style="margin: 0; padding: 0;">
-  <table border="1" cellpadding="0" cellspacing="0" width="100%">
-  <tr>
-   <td>
-    Hello!
-   </td>
-  </tr>
- </table>
-</body>
+  <table align="center" border="1" cellpadding="0" cellspacing="0" width="600" style="border-collapse: collapse;">
+   <tr>
+    <td>
+     Hello!
+    </td>
+   </tr>
+  </table>
