--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <table align="center" border="1" cellpadding="0" cellspacing="0" width="600">
    <tr>
      <td align="center" bgcolor="#70bbd9" style="padding: 40px 0 30px 0;">
-  <img src="images/h1.gif" alt="Creating Email Magic" width="300" height="230" style="display: block;" />
+  <img src="pics/flat.png" alt="Creating Email Magic" width="300" height="230" style="display: block;" />
  </td>
    </tr>
    <tr>
