adding padding to middle cell to create space around that specific table

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  </td>
    </tr>
    <tr>
-    <td bgcolor="#ffffff">
+  <td bgcolor="#ffffff" style="padding: 40px 30px 40px 30px;">
      Row 2
     </td>
    </tr>
