--- a/index.html
+++ b/index.html
@@ -17,7 +17,23 @@
    </tr>
    <tr>
   <td bgcolor="#ffffff" style="padding: 40px 30px 40px 30px;">
-     Row 2
+    <table border="1" cellpadding="0" cellspacing="0" width="100%">
+  <tr>
+   <td>
+    Row 1
+   </td>
+  </tr>
+  <tr>
+   <td>
+    Row 2
+   </td>
+  </tr>
+  <tr>
+   <td>
+    Row 3
+   </td>
+  </tr>
+ </table>
     </td>
    </tr>
    <tr>
