--- a/index.html
+++ b/index.html
@@ -19,11 +19,24 @@
   <td bgcolor="#ffffff" style="padding: 40px 30px 40px 30px;">
     <table border="1" cellpadding="0" cellspacing="0" width="100%">
  <tr>
+  <td>
+   Lorem ipsum dolor sit amet!
+  </td>
+ </tr>
+ <tr>
+  <td style="padding: 20px 0 30px 0;">
+   Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tempus adipiscing felis, sit amet blandit ipsum volutpat sed. Morbi porttitor, eget accumsan dictum, nisi libero ultricies ipsum, in posuere mauris neque at erat.
+  </td>
+ </tr>
+</table>
+
+    <table border="1" cellpadding="0" cellspacing="0" width="100%">
+ <tr>
   <td width="260" valign="top">
    <table border="1" cellpadding="0" cellspacing="0" width="100%">
     <tr>
      <td>
-      <img src="pics/12.png" alt="" width="100%" height="140" style="display: block;" />
+      <img src="pics/wip.png" alt="" width="100%" height="140" style="display: block;" />
      </td>
     </tr>
     <tr>
@@ -48,7 +61,3 @@
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tempus adipiscing felis, sit amet blandit ipsum volutpat sed. Morbi porttitor, eget accumsan dictum, nisi libero ultricies ipsum, in posuere mauris neque at erat.
      </td>
     </tr>
-   </table>
-  </td>
- </tr>
-</table>
