--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tempus adipiscing felis, sit amet blandit ipsum volutpat sed. Morbi porttitor, eget accumsan dictum, nisi libero ultricies ipsum, in posuere mauris neque at erat.
   </td>
  </tr>
+ <tr>
+ <td>
+  Row 3
+ </td>
+</tr>
 </table>
 
     <table border="1" cellpadding="0" cellspacing="0" width="100%">
@@ -61,3 +66,11 @@
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tempus adipiscing felis, sit amet blandit ipsum volutpat sed. Morbi porttitor, eget accumsan dictum, nisi libero ultricies ipsum, in posuere mauris neque at erat.
      </td>
     </tr>
+    <tr>
+    <table>
+      <tr>
+      <td>
+       Row 3
+      </td>
+     </tr>
+    </table>
