--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
    <table border="1" cellpadding="0" cellspacing="0" width="100%">
     <tr>
      <td>
-      <img src="pics/wip.png" alt="" width="100%" height="140" style="display: block;" />
+      <img src="pics/12.png" alt="" width="100%" height="140" style="display: block;" />
      </td>
     </tr>
     <tr>
